name: engine-io-snap
version: 1.0.0
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.10
extra-source-files: Changelog.md
description:
  This package provides an @engine-io@ @ServerAPI@ that is compatible with
  <http://snapframework.com Snap>.

library
  exposed-modules:
    Network.EngineIO.Snap

  build-depends:
    attoparsec-enumerator >= 0.3 && <0.4,
    base >=4.6 && <4.8,
    bytestring >= 0.9 && <0.11,
    containers >=0.5 && <0.6,
    engine-io >= 1.0 && <1.1,
    snap-core >= 0.9 && <0.10,
    unordered-containers >= 0.2 && <0.3,
    websockets >=0.8 && <0.9,
    websockets-snap >= 0.8 && <0.9

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
