name: engine-io-snap
version: 1.0.2
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.10
extra-source-files: Changelog.md
description:
  This package provides an @engine-io@ @ServerAPI@ that is compatible with
  <http://snapframework.com Snap>.

library
  exposed-modules:
    Network.EngineIO.Snap

  build-depends:
    attoparsec-enumerator >= 0.3 && <0.4,
    base >=4.6 && <4.8,
    bytestring >= 0.9 && <0.11,
    containers >=0.5 && <0.6,
    engine-io >= 1.2 && <1.3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    snap-core >= 0.9 && <0.10,
    unordered-containers >= 0.2 && <0.3,
    websockets >=0.8 && <0.10,
    websockets-snap >= 0.9 && <0.10

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
