name: engine-io-snap
version: 1.0.4
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.10
extra-source-files: Changelog.md
description:
  This package provides an @engine-io@ @ServerAPI@ that is compatible with
  <http://snapframework.com Snap>.

library
  exposed-modules:
    Network.EngineIO.Snap

  build-depends:
    io-streams >= 1.0.0.0 && < 1.4,
    base >=4.6 && <4.10,
    bytestring >= 0.9 && <0.11,
    containers >=0.5 && <0.6,
    engine-io >= 1.2 && <1.3,
    lifted-base >= 0.1 && < 0.3,
    snap-core >= 1.0 && < 1.1,
    unordered-containers >= 0.2 && <0.3,
    websockets >=0.8 && <0.11,
    websockets-snap >= 0.9 && <0.11

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
