name: engine-io-wai
version: 1.0.10
synopsis: An @engine-io@ @ServerAPI@ that is compatible with @Wai@
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Brandon Martin
maintainer: brandon@codedmart.com
category: Network
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10
description:
    This package provides an @engine-io@ @ServerAPI@ that is compatible with
    <https://hackage.haskell.org/package/wai/ Wai>.

extra-source-files: Changelog.md

library
    exposed-modules:
        Network.EngineIO.Wai

    build-depends:
        base >=4.6 && <4.13,
        engine-io >= 1.2 && < 1.3,
        http-types >= 0.8 && < 0.13,
        unordered-containers >= 0.2 && < 0.3,
        wai >= 3.0 && < 3.3,
        text >= 1.1 && < 1.3,
        bytestring >= 0.9 && <0.11,
        websockets >= 0.8 && < 0.13,
        wai-websockets >= 3 && < 3.1,
        mtl >= 2 && < 2.3,
        either >= 4,
        transformers >= 0.2 && < 0.6,
        transformers-compat >= 0.4,
        attoparsec >= 0.10 && < 0.14

    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -O2
