name: engine-io
version: 1.0.0
synopsis: A Haskell implementation of Engine.IO
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    Network.EngineIO

  other-extensions:
   RankNTypes, OverloadedStrings, RecordWildCards

  build-depends:
    aeson >=0.7 && <0.8,
    async >=2.0 && <2.1,
    attoparsec >=0.12 && <0.13,
    base >=4.7 && <4.8,
    base64-bytestring >=1.0 && <1.1,
    bytestring >=0.10 && <0.11,
    either >= 4.3 && <4.4,
    monad-loops >=0.4 && <0.5,
    mwc-random >=0.13 && <0.14,
    stm >=2.4 && <2.5,
    text >=1.1 && <1.2,
    transformers >=0.3 && <0.4,
    unordered-containers >=0.2 && <0.3,
    vector >=0.10 && <0.11,
    websockets >=0.8 && <0.9

  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options: -Wall -O2 -fwarn-incomplete-uni-patterns