name: engine-io
version: 1.2.15
synopsis: A Haskell implementation of Engine.IO
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10
description:
  This library provides a Haskell implementation of
  <https://github.com/Automattic/engine.io Engine.IO>, a library for real-time
  client-server communication on the web. Engine.IO works with old browsers via
  XHR long-polling, and seamlessy upgrades to web sockets. This implementation
  supports the majority of the Engine.IO protocol, including text and binary
  packets and the upgrading protocol.

extra-source-files: Changelog.md

library
  exposed-modules:
    Network.EngineIO

  other-extensions:
   RankNTypes, OverloadedStrings, RecordWildCards

  build-depends:
    aeson >=0.7 && <1.2,
    async >=2.0 && <2.2,
    attoparsec >=0.11 && <0.14,
    base >=4.6 && <4.10,
    base64-bytestring >=1.0 && <1.1,
    bytestring >=0.10.2.0 && <0.11,
    either >= 3.4 && <4.5,
    free >= 4.9 && <5.0,
    monad-loops >=0.4 && <0.5,
    mwc-random >=0.13 && <0.14,
    stm >=2.4 && <2.5,
    stm-delay >= 0.1.1 && <0.2,
    text >=0.11 && <1.3,
    transformers >=0.2 && <0.6,
    unordered-containers >=0.2 && <0.3,
    vector >=0.10 && <0.13,
    websockets >=0.8 && <0.11

  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options: -Wall -O2 -fwarn-incomplete-uni-patterns
