name: examples
version: 1.0.0
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10

Executable binary
  default-language: Haskell2010
  main-is: binary/Main.hs
  build-depends:
    aeson,
    base,
    bytestring,
    engine-io,
    engine-io-snap,
    mtl,
    snap-cors,
    snap-server,
    socket-io,
    stm,
    text,
    transformers

  ghc-options: -Wall -O2
