name: socket-io
version: 1.3.7
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.10
extra-source-files: Changelog.md
description:
  This library provides an implementation of <http://socket.io Socket.io>
  protocol (version 1). It builds on top of Engine.IO, allowing Socket.io to
  work with both long polling XHR requests, and seamlessly upgrading them to
  HTML 5 web sockets.

library
  exposed-modules:
    Network.SocketIO

  other-extensions:
    FlexibleContexts, OverloadedStrings, RankNTypes

  build-depends:
    aeson >=0.7 && <1.2,
    attoparsec >=0.10 && <0.14,
    base >=4.6 && <4.10,
    bytestring >=0.10 && <0.11,
    engine-io >= 1 && <1.3,
    mtl >=2.1 && <2.3,
    stm >=2.4 && <2.5,
    text >=0.11 && <1.3,
    transformers >=0.2 && <0.6,
    unordered-containers >=0.2 && <0.3,
    vector >=0.10 && <0.13

  hs-source-dirs: src
  default-language: Haskell2010
