name: chat
version: 1.0.0
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10

Data-Dir: resources
Data-files:
  index.html

Executable chat
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    engine-io,
    engine-io-snap,
    snap-core,
    snap-server,
    socket-io,
    stm,
    text,
    transformers
  main-is: Main.hs
  other-modules: Paths_chat
  ghc-options: -Wall -O2
