name: chat
version: 1.0.0
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10

Data-Dir: resources
Data-files:
  index.html
  main.js
  style.css

Executable chat-snap
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    engine-io,
    engine-io-snap,
    snap-core,
    snap-server,
    socket-io,
    stm,
    text,
    transformers
  main-is: MainSnap.hs
  other-modules: Paths_chat
  ghc-options: -Wall -O2 -threaded

Executable chat-yesod
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    engine-io,
    yesod-core,
    yesod-static,
    engine-io-yesod,
    socket-io,
    stm,
    text,
    transformers,
    template-haskell
  main-is: MainYesod.hs
  ghc-options: -Wall -O2 -threaded

Executable chat-wai
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    engine-io,
    wai,
    wai-app-static,
    warp,
    engine-io-wai,
    socket-io,
    stm,
    text,
    transformers,
    system-filepath,
    wai-util,
    http-types
  main-is: MainWai.hs
  other-modules: Paths_chat
  ghc-options: -Wall -O2 -threaded
