name: binary
version: 1.0.0
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10

Data-Dir: resources
Data-files:
  index.html

Executable binary
  default-language: Haskell2010
  build-depends:
    base,
    engine-io,
    engine-io-snap,
    snap-core,
    snap-server,
    stm,
    transformers
  main-is: Main.hs
  other-modules: Paths_binary
  ghc-options: -Wall -O2
